--- a/requirements.txt
+++ b/requirements.txt
@@ -12,19 +12,24 @@ colorama==0.4.6
 Django==4.2.6
 django-celery-results==2.5.1
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 idna==3.4
+inflection==0.5.1
 kombu==5.3.7
+packaging==24.0
 prompt-toolkit==3.0.39
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2024.1
+PyYAML==6.0.1
 redis==5.0.3
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.0.6
 vine==5.1.0
 wcwidth==0.2.8
